# TXPK

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
app/: CLI.md  CMakeLists.txt
app/include/: Bin.h  FitsResult.h  JsonConverter.h  Rectangle.h  TextureInfo.h
app/src/: ImageRenderer.cpp  Main.cpp  Node.cpp
core/: CMakeLists.txt
core/include/TXPK/Core/: Bin.hpp  Color.hpp  Color.inl  Common.hpp  Comparison.hpp  Comparison.inl  FitResult.hpp  IDataExporter.hpp  IKeyConverter.hpp  IPacker.hpp  Margin.hpp  Project.hpp  Rectangle.hpp  Rectangle.inl  RectangleMerger.hpp  ServiceLocator.hpp  ServiceLocator.inl  SizeConstraintType.hpp  StringExtension.hpp  StringExtension.inl  Texture.hpp  Texture.inl  VectorExtension.hpp  VectorExtension.inl
core/include/TXPK/Exporters/: CppHeaderExporter.hpp  EXPORTERS.md  JsonExporter.hpp  LuaExporter.hpp  MultiExporter.hpp
core/include/TXPK/FileSystem/: FileNode.hpp  FileSystem.hpp
core/include/TXPK/KeyConverters/: EnumeratorConverter.hpp  FileWithoutExtConverter.hpp  KEYCONVERTERS.md  LuaConverter.hpp  RegexConverter.hpp
core/include/TXPK/Math/: MathExtension.hpp
core/include/TXPK/Packers/: BlackspawnPacker.hpp  PACKERS.md  SameSizePacker.hpp
core/src/Core/: Bin.cpp  Margin.cpp  Project.cpp  Rectangle.cpp  RectangleMerger.cpp  ServiceLocator.cpp  StringExtension.cpp  Texture.cpp
core/src/Exporters/: CppHeaderExporter.cpp  JsonExporter.cpp  LuaExporter.cpp  MultiExporter.cpp
core/src/FileSystem/: FileNode.cpp  FileSystem.cpp
core/src/KeyConverters/: EnumeratorConverter.cpp  FileWithoutExtConverter.cpp  LuaConverter.cpp  RegexConverter.cpp
core/src/Math/: MathExtension.cpp
core/src/Packers/: BlackspawnPacker.cpp  SameSizePacker.cpp
engine/: CMakeLists.txt
engine/include/: JsonConverter.h  MathHelper.h  Node.h
engine/src/: JsonConverter.cpp  MathHelper.cpp  Packer.cpp
example/: CMakeLists.txt  README.md
example/app/: CMakeLists.txt
example/app/include/: Atlas.hpp  CustomSprite.hpp  Texture.hpp
example/app/src/: Atlas.cpp  CustomSprite.cpp  Main.cpp
example/content/animations/: skeleton_attack.json  skeleton_dead.json  skeleton_hit.json
example/content/meta/: atlas.json  skeleton.hpp  skeleton.json
example/content/scripts/: CustomCppHeaderExporter.lua  CustomEnumeratorKeyConverter.lua
example/content/txpk/: skeleton.txpk
example/include/: AnimatedSprite.h  Animation.h  Atlas.h  Frame.h  Texture.h
example/src/: AnimatedSprite.cpp  Animation.cpp  Atlas.cpp  Main.cpp
ext/: CMakeLists.txt
ext/LuaJIT/lib/x64/: buildvm.exp  lua51.exp  luajit.exp  minilua_s.exp
ext/LuaJIT/lib/x86/: buildvm_s.exp  luajit_s.exp  minilua_s.exp
ext/dirent/: CMakeLists.txt
ext/dirent/src/: dirent.c
ext/etc/lua/: lua.hpp
ext/json/: CMakeLists.txt
ext/stb_image/: CMakeLists.txt
ext/stb_image/include/: stb_image.h  stb_image_write.h
ext/stb_image/src/: stb_image.cpp
include/: ImageRenderer.h  Packer.h
reference/results/no_rotation/: atlas.json
reference/results/rotation/: atlas.json
src/: JsonConverter.cpp  Main.cpp  Packer.cpp  Rectangle.cpp  TextureInfo.cpp
tests/: CMakeLists.txt
tests/content/: CustomEnumeratorKeyConverter.lua  TxtExporter.lua  WithoutResetKeyConverter.lua
tests/src/: Main.cpp
tests/src/Core/: BinTest.cpp  ColorTest.cpp  CommonTest.cpp  ComparisonTest.cpp  MarginTest.cpp  ProjectTest.cpp  RectangleMergerTest.cpp  RectangleTest.cpp  ServiceLocatorTest.cpp  StringExtensionTest.cpp  TextureTest.cpp  VectorExtensionTest.cpp
tests/src/Exporters/: CppHeaderExporterTest.cpp  JsonExporterTest.cpp  LuaExporterTest.cpp  MultiExporterTest.cpp
tests/src/FileSystem/: FileNodeTest.cpp  FileSystemTest.cpp
tests/src/KeyConverters/: EnumeratorConverterTest.cpp  FileWithoutExtConverterTest.cpp  LuaConverterTest.cpp  RegexConverterTest.cpp
tests/src/Math/: MathExtensionsTest.cpp
tests/src/Packers/: BlackspawnPackerTest.cpp  SameSizePacker.cpp
